--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Neal Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <h1>Jackson Neal Portfolio Website</h1>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -22,10 +50,10 @@
     </p>
     <hr>
     <h2>Artwork</h2>
-    
+
     <div class="row">
         <div class="col-12">
-            <img src="soulfighter.png" alt="soulfighter" width="auto"> 
+            <img src="soulfighter.png" alt="soulfighter" width="auto">
             <img src="Screenshot 2022-09-14 194835.png" alt="island">
             <img src="aatrox.png" alt="aatrox">
             <img src="water.png" alt="water">
@@ -33,7 +61,7 @@
         </div>
     </div>
     <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
-    <a href = "mailto: Jackson.neal@comcast.net">Send Email</a>
+    <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
 </body>
 
 </html>
