--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,44 +24,72 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Gallary</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Links & Docs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Other</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h1>Jackson Neal Portfolio Website</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Urna molestie
-        at elementum eu facilisis sed. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend
-        donec. Augue lacus viverra vitae congue eu consequat ac. Dictum non consectetur a erat nam at lectus.
-        Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sollicitudin nibh sit amet commodo
-        nulla facilisi. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Turpis tincidunt id aliquet risus
-        feugiat in ante metus. Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. Imperdiet dui accumsan
-        sit amet nulla. Et sollicitudin ac orci phasellus egestas. Pellentesque elit ullamcorper dignissim cras
-        tincidunt lobortis feugiat. Arcu vitae elementum curabitur vitae nunc. Id diam maecenas ultricies mi eget.
-    </p>
-    <hr>
-    <h2>Artwork</h2>
 
-    <div class="row">
-        <div class="col-12">
-            <img src="soulfighter.png" alt="soulfighter" width="auto">
-            <img src="Screenshot 2022-09-14 194835.png" alt="island">
-            <img src="aatrox.png" alt="aatrox">
-            <img src="water.png" alt="water">
-            <hr>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <img src="IMG_2856.JPG" alt="Profile" id="profilePic">
+            </div>
+            <div class="col-6">
+                <h1>Jackson Neal</h1>
+                <h2>Level Designer and Concept Artist</h2>
+                <h3>Boise State University Student: Class of 2025</h3>
+                <hr>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore
+                    magna aliqua. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium.
+                    Urna molestie
+                    at elementum eu facilisis sed. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque
+                    eleifend
+                    donec. Augue lacus viverra vitae congue eu consequat ac. Dictum non consectetur a erat nam at
+                    lectus.
+                    Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sollicitudin nibh sit
+                    amet commodo
+                    nulla facilisi. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Turpis tincidunt id
+                    aliquet risus
+                    feugiat in ante metus. Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. Imperdiet
+                    dui accumsan
+                    sit amet nulla. Et sollicitudin ac orci phasellus egestas. Pellentesque elit ullamcorper dignissim
+                    cras
+                    tincidunt lobortis feugiat. Arcu vitae elementum curabitur vitae nunc. Id diam maecenas ultricies mi
+                    eget.
+                </p>
+            </div>
         </div>
+        <h2>Artwork</h2>
+        <div class="row">
+            <div class="col-6">
+                <img src="soulfighter.png" alt="soulfighter" width="auto">
+            </div>
+            <div class="col-6">
+                <img src="Screenshot 2022-09-14 194835.png" alt="island">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="aatrox.png" alt="aatrox">
+            </div>
+            <div class="col-6">
+                <img src="water.png" alt="water">
+            </div>
+        </div>
+        <hr>
+        <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
+        <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
     </div>
-    <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
-    <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
 </body>
 
 </html>
