--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
                 <img src="water.png" alt="water">
             </div>
         </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="subpainter_conceptart.png" alt="SSPConceptArt">
+            </div>
+            <div class="col-6">
+                <img src="noxus.png" alt="noxusConceptArt">
+            </div>
+        </div>
         <hr>
         <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
         <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
