--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navBar.css">
 </head>
 
 <body>
+
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -20,22 +22,59 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="navbar">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="navbar">
                         <a class="nav-link" href="#">Gallary</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Links & Docs</a>
+                    <li class="navbar">
+                        <div class="dropdown">
+                            <button class="dropbtn">Projects
+                                <i class="fa fa-caret-down"></i>
+                            </button>
+                            <div class="dropdown-content">
+                                <a href="#">Link 1</a>
+                                <a href="#">Link 2</a>
+                                <a href="#">Link 3</a>
+                            </div>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Other</a>
+                    <li class="navbar">
+                        <a class="nav-link" href="#">Contact Me</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+
+
+    <!--
+        <div class="topnav" id="myTopnav">
+        <a class="navbar-brand" href="#">Jackson Neal</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="">Gallary</a>
+        <a href="">Projects</a>
+        <a href="">Contact Me</a>
+
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
+    -->
+
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 
     <div class="container">
         <div class="row">
@@ -48,24 +87,23 @@
                 <h3>Boise State University Student: Class of 2025</h3>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium.
-                    Urna molestie
-                    at elementum eu facilisis sed. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque
-                    eleifend
-                    donec. Augue lacus viverra vitae congue eu consequat ac. Dictum non consectetur a erat nam at
-                    lectus.
-                    Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sollicitudin nibh sit
-                    amet commodo
-                    nulla facilisi. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Turpis tincidunt id
-                    aliquet risus
-                    feugiat in ante metus. Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. Imperdiet
-                    dui accumsan
-                    sit amet nulla. Et sollicitudin ac orci phasellus egestas. Pellentesque elit ullamcorper dignissim
-                    cras
-                    tincidunt lobortis feugiat. Arcu vitae elementum curabitur vitae nunc. Id diam maecenas ultricies mi
-                    eget.
+                    Hi, my name is Jackson Neal. I am currently a Junior at Boise State University, pursuing a bachlors
+                    degree in GIMM (Game, Interactive, Mobile and Media). I have been very passionate about making games
+                    ever since I was little, and I've learned to make my passion a reality. I have been apart of many
+                    great projects with peers in college, and working on personal projects as well. When it comes to new
+                    ideas however, I am more than happy to try new things, and see where those new ideas will lead me.
+                </p>
+                <p>
+                    I am looking to
+                    pursue a carrer in Game Design, with an emphasis in Level Design, Puzzle Design, Problem Solving,
+                    and Concept Art. This page is for employers to see what I have done over my years of professional
+                    experience in college and ouside, and for you to get in concact me.
+                </p>
+                <p>
+                    If you have any questions you would like to ask me abou my experience as a Game Design student, or
+                    about the GIMM program, my contact information is at the bottom of the page, and at the top of the
+                    page. My socials and resume are open to all people to look at, and to see my skills. I hope that you
+                    consider me for a position!
                 </p>
             </div>
         </div>
