--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jackson Neal Website</title>
+    <title>Jackson Neal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -15,33 +15,24 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Jackson Neal</a>
+            <a class="navbar-brand" href="index.html">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="navbar">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="navbar">
-                        <a class="nav-link" href="#">Gallary</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallary.html">Gallary</a>
                     </li>
-                    <li class="navbar">
-                        <div class="dropdown">
-                            <button class="dropbtn">Projects
-                                <i class="fa fa-caret-down"></i>
-                            </button>
-                            <div class="dropdown-content">
-                                <a href="#">Link 1</a>
-                                <a href="#">Link 2</a>
-                                <a href="#">Link 3</a>
-                            </div>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
-                    <li class="navbar">
-                        <a class="nav-link" href="#">Contact Me</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -63,18 +54,6 @@
         </a>
     </div>
     -->
-
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
 
     <div class="container">
         <div class="row">
@@ -105,31 +84,6 @@
                     page. My socials and resume are open to all people to look at, and to see my skills. I hope that you
                     consider me for a position!
                 </p>
-            </div>
-        </div>
-        <h2>Artwork</h2>
-        <div class="row">
-            <div class="col-6">
-                <img src="soulfighter.png" alt="soulfighter" width="auto">
-            </div>
-            <div class="col-6">
-                <img src="Screenshot 2022-09-14 194835.png" alt="island">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <img src="aatrox.png" alt="aatrox">
-            </div>
-            <div class="col-6">
-                <img src="water.png" alt="water">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <img src="subpainter_conceptart.png" alt="SSPConceptArt">
-            </div>
-            <div class="col-6">
-                <img src="noxus.png" alt="noxusConceptArt">
             </div>
         </div>
         <hr>
