--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,19 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <img src="https://static.vecteezy.com/system/resources/previews/018/930/587/non_2x/linkedin-logo-linkedin-icon-transparent-free-png.png"
+                    alt="linkedIn" id="icon">
+                <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
+                <img src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png" alt="email" id="icon">
+                <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
