--- a/gallary.html
+++ b/gallary.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jackson Neal</a>
+            <a class="navbar-brand" id="big-name" href="index.html">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="gallary.html">Gallary</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Custom Cards</a>
                     </li>
                 </ul>
             </div>
@@ -40,28 +37,72 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <div class="name">
+                    <h1>Jackson Neal</h1>
+                    <h2>Level Designer and Concept Artist</h2>
+                    <h3>Boise State University Student: Class of 2025</h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="col-5">
+                <p>
+                    This section is for all of the art that I have done over my years at BSU. Some of them have been
+                    through projects for classes, and others have been personal projects. Here are just a few of those
+                    projects.
+                </p>
+            </div>
+            <div class="col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-5">
                 <img src="soulfighter.png" alt="soulfighter" width="auto">
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <img src="Screenshot 2022-09-14 194835.png" alt="island">
             </div>
+            <div class="col-1"></div>
         </div>
         <div class="row">
-            <div class="col-6">
-                <img src="aatrox.png" alt="aatrox">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <div class="bg-image hover zoom">
+                    <img src="aatrox.png" alt="aatrox">
+
+                </div>
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <img src="water.png" alt="water">
             </div>
+            <div class="col-1"></div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-1"></div>
+            <div class="col-5">
                 <img src="subpainter_conceptart.png" alt="SSPConceptArt">
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <img src="noxus.png" alt="noxusConceptArt">
             </div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row"></div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 center">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/"
+                    role="button">LinkedIn</a>
+
+                <a class="btn btn-primary btn-lg" href="mailto: Jackson.neal@comcast.net" role="button">Email</a>
+
+                <a class="btn btn-primary btn-lg" href="https://github.com/Jackson-N" role="button">GitHub</a>
+
+            </div>
+            <div class="col-4"></div>
         </div>
     </div>
 
