--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jackson Neal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navBar.css">
 </head>
@@ -15,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jackson Neal</a>
+            <a class="navbar-brand" id="big-name" href="index.html">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,16 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="gallary.html">Gallary</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Custom Cards</a>
                     </li>
                 </ul>
             </div>
@@ -60,33 +58,50 @@
             <div class="col-6">
                 <img src="IMG_2856.JPG" alt="Profile" id="profilePic">
             </div>
-            <div class="col-6">
-                <h1>Jackson Neal</h1>
-                <h2>Level Designer and Concept Artist</h2>
-                <h3>Boise State University Student: Class of 2025</h3>
-                <hr>
-                <p>
-                    Hi, my name is Jackson Neal. I am currently a Junior at Boise State University, pursuing a bachlors
-                    degree in GIMM (Game, Interactive, Mobile and Media). I have been very passionate about making games
-                    ever since I was little, and I've learned to make my passion a reality. I have been apart of many
-                    great projects with peers in college, and working on personal projects as well. When it comes to new
-                    ideas however, I am more than happy to try new things, and see where those new ideas will lead me.
+            <div class="col-5">
+                <div class="name">
+                    <h1>Jackson Neal</h1>
+                    <h2>Level Designer and Concept Artist</h2>
+                    <h3>Boise State University Student: Class of 2025</h3>
+                    <hr>
+                </div>
+                <p class="top">
+                    Greetings, my name is Jackson Neal and I am a Junior at Boise State University, majoring in Gaming,
+                    Interactive, Mobile and Media (GIMM). I have a lifelong passion for game development and I have
+                    acquired the skills and knowledge to turn my passion into reality. I have participated in many
+                    collaborative and individual projects in college and outside, showcasing my creativity and
+                    versatility. I am always eager to explore new ideas and challenges, and to see where they will take
+                    me.
                 </p>
-                <p>
-                    I am looking to
-                    pursue a carrer in Game Design, with an emphasis in Level Design, Puzzle Design, Problem Solving,
-                    and Concept Art. This page is for employers to see what I have done over my years of professional
-                    experience in college and ouside, and for you to get in concact me.
+                <p class="mid">
+                    I aspire to pursue a career in Game Design, with a focus on Level Design, Puzzle Design, Problem
+                    Solving, and Concept Art. This page is a portfolio of my work and achievements over the years of my
+                    professional experience in college and beyond, and a way for you to contact me.
                 </p>
-                <p>
-                    If you have any questions you would like to ask me abou my experience as a Game Design student, or
-                    about the GIMM program, my contact information is at the bottom of the page, and at the top of the
-                    page. My socials and resume are open to all people to look at, and to see my skills. I hope that you
-                    consider me for a position!
+                <p class="bot">
+                    If you have any inquiries about my background as a Game Design student, or about the GIMM program,
+                    you can find my contact information at the top and bottom of the page. My social media accounts and
+                    resume are also available for you to review my skills and qualifications. I appreciate your
+                    consideration for a position in your organization.
                 </p>
             </div>
+            <div class="col-1"></div>
         </div>
-        
+        <div class="row"></div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 center">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/" role="button">LinkedIn</a>
+
+                <a class="btn btn-primary btn-lg" href="mailto: Jackson.neal@comcast.net" role="button">Email</a>
+
+                <a class="btn btn-primary btn-lg" href="https://github.com/Jackson-N" role="button">GitHub</a>
+                
+            </div>
+            <div class="col-4"></div>
+        </div>
+
     </div>
 </body>
 
