--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jackson Neal</a>
+            <a class="navbar-brand" id="big-name" href="index.html">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="gallary.html">Gallary</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact Me</a>
+                        <a class="nav-link active" href="contact.html">Custom Cards</a>
                     </li>
                 </ul>
             </div>
@@ -41,12 +38,24 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <img src="https://static.vecteezy.com/system/resources/previews/018/930/587/non_2x/linkedin-logo-linkedin-icon-transparent-free-png.png"
-                    alt="linkedIn" id="icon">
-                <a href="https://www.linkedin.com/in/jackson-neal-/">Visit my LinkedIn profile here!</a>
-                <img src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png" alt="email" id="icon">
-                <a href="mailto: Jackson.neal@comcast.net">Send Email</a>
+
             </div>
+        </div>
+
+        <div class="row"></div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 center">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/"
+                    role="button">LinkedIn</a>
+
+                <a class="btn btn-primary btn-lg" href="mailto: Jackson.neal@comcast.net" role="button">Email</a>
+
+                <a class="btn btn-primary btn-lg" href="https://github.com/Jackson-N" role="button">GitHub</a>
+
+            </div>
+            <div class="col-4"></div>
         </div>
     </div>
 
