--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jackson Neal</a>
+            <a class="navbar-brand" id="big-name" href="index.html">Jackson Neal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,21 +22,42 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="gallary.html">Gallary</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Custom Cards</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+
+        <div class="row"></div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 center">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/"
+                    role="button">LinkedIn</a>
+
+                <a class="btn btn-primary btn-lg" href="mailto: Jackson.neal@comcast.net" role="button">Email</a>
+
+                <a class="btn btn-primary btn-lg" href="https://github.com/Jackson-N" role="button">GitHub</a>
+
+            </div>
+            <div class="col-4"></div>
+        </div>
+    </div>
 
 </body>
 
