--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <title>Jackson Neal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navBar.css">
 </head>
@@ -37,7 +40,7 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="collapse navbar-collapse"></i>
         </a>
-        
+
     </nav>
 
     <script>
@@ -52,11 +55,59 @@
     </script>
 
     <div class="container">
-        <div class="row">
-            <div class="col-12">
 
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <div class="name">
+                    <h1>Jackson Neal</h1>
+                    <h2>Level Designer and Concept Artist</h2>
+                    <h3>Boise State University Student: Class of 2025</h3>
+                    <img src="https://preview.redd.it/jack-as-a-lol-champ-v0-d4f0mjkea6ua1.png?auto=webp&s=3ab814b719c41252cb336adadfa25c68c5be4c2e"
+                        alt="JackLoR">
+                </div>
             </div>
+            <div class="col-5">
+                <p>
+                    This section is for one of my personal projects for Game Design and Collaborative work. The work
+                    that I have done on this page is for the "Legends of Runeterra" by Riot Games. This card game takes
+                    place in the world of League of Legends and expands on the world through cards and its characters. I
+                    will be adding more custom cards later down the line, and will post my finished products here on
+                    this page. The cards that are one this page are finished products.
+                </p>
+                <p>
+                    These cards are not offical work of Riot games, nor am I associated with Riot Games. I am simply
+                    making cards for a company and game that I very much enjoy, as well as showcase what I can do in
+                    terms of creative work for taking characters form LoL and moving them to card-form. Links to the
+                    images I used in this project will be below.
+                </p>
+            </div>
+            <div class="col-1"></div>
         </div>
+        
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8 center">
+                <img src="lorbigw.png" alt="LoRbar" class="banner">
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <img src="renataglasc.png" alt="LoRbar" class="banner">
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <img src="shaco.png" alt="LoRbar" class="banner">
+            </div>
+            <div class="col-2"></div>
+        </div>
+
 
         <div class="row"></div>
         <div class="row">
