--- a/contact.html
+++ b/contact.html
@@ -63,23 +63,24 @@
                     <h1>Jackson Neal</h1>
                     <h2>Level Designer and Concept Artist</h2>
                     <h3>Boise State University Student: Class of 2025</h3>
+                    <hr>
                     <img src="https://preview.redd.it/jack-as-a-lol-champ-v0-d4f0mjkea6ua1.png?auto=webp&s=3ab814b719c41252cb336adadfa25c68c5be4c2e"
                         alt="JackLoR">
                 </div>
             </div>
             <div class="col-5">
                 <p>
-                    This section is for one of my personal projects for Game Design and Collaborative work. The work
-                    that I have done on this page is for the "Legends of Runeterra" by Riot Games. This card game takes
-                    place in the world of League of Legends and expands on the world through cards and its characters. I
+                    This section is for one of my personal projects for Game Design and Collaborative Work. The work
+                    that I have done on this page is for <i>"Legends of Runeterra"</i> by Riot Games. This card game takes
+                    place in the world of <i>League of Legends</i> and expands on the world through cards and its characters. I
                     will be adding more custom cards later down the line, and will post my finished products here on
-                    this page. The cards that are one this page are finished products.
+                    this page and on my Instagram. The cards that are one this page are finished products.
                 </p>
                 <p>
-                    These cards are not offical work of Riot games, nor am I associated with Riot Games. I am simply
+                    <b>DISCLAIMER:</b> These cards are <b>not</b> offical works of Riot games, nor am I associated with Riot Games. I am simply
                     making cards for a company and game that I very much enjoy, as well as showcase what I can do in
                     terms of creative work for taking characters form LoL and moving them to card-form. Links to the
-                    images I used in this project will be below.
+                    images and references I've used in this project will be below.
                 </p>
             </div>
             <div class="col-1"></div>
