--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="gallary.html">Gallary</a>
+                        <a class="nav-link" href="gallary.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="projects.html">Projects</a>
