--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <div class="name">
                     <h1>Jackson Neal</h1>
                     <h2>Level Designer and Concept Artist</h2>
-                    <h3>Boise State University Student: Class of 2025</h3>
+                    <h3>Custom Cards for <i>Legends of Runeterra</i></h3>
                     <hr>
                     <img src="https://preview.redd.it/jack-as-a-lol-champ-v0-d4f0mjkea6ua1.png?auto=webp&s=3ab814b719c41252cb336adadfa25c68c5be4c2e"
                         alt="JackLoR">
