--- a/gallary.html
+++ b/gallary.html
@@ -61,7 +61,7 @@
                 <div class="name">
                     <h1>Jackson Neal</h1>
                     <h2>Level Designer and Concept Artist</h2>
-                    <h3>Boise State University Student: Class of 2025</h3>
+                    <h3>Photography and 2D-Art Gallery</h3>
                     <hr>
                 </div>
             </div>
