--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                     <hr>
                 </div>
                 <p class="top">
-                    Greetings, my name is Jackson Neal and I am a Junior at Boise State University, majoring in Gaming,
-                    Interactive, Mobile and Media (GIMM). I have a lifelong passion for game development and I have
+                    Greetings, my name is Jackson Neal, I am a Junior at Boise State University, majoring in Gaming,
+                    Interactive, Mobile and Media (GIMM). I have had a lifelong passion for game development and I've
                     acquired the skills and knowledge to turn my passion into reality. I have participated in many
                     collaborative and individual projects in college and outside, showcasing my creativity and
-                    versatility. I am always eager to explore new ideas and challenges, and to see where they will take
+                    versatility. I'm always eager to explore new ideas and challenges, and to see where they will take
                     me.
                 </p>
                 <p class="mid">
