--- a/projects.html
+++ b/projects.html
@@ -57,8 +57,24 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-5">
+                    <p>
+                        This section is for projects that I have done in my years of working in Game Design, Art, and Leadership.
+                        Projects that are posted here are finished products, and will listed as 'In-Progress' if otherwise.
+                    </p>
+                </div>
+                <div class="col-5">
+                    <div class="name">
+                        <h1>Jackson Neal</h1>
+                        <h2>Level Designer and Concept Artist</h2>
+                        <h3>Group and Personal Projects in Art and in Game Design</h3>
+                        <hr>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
         </div>
 
         <div class="row"></div>
