--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,10 @@
                 </div>
             </div>
             <div class="col-4">
-                <iframe src="https://www.youtube.com/watch?v=0rbUDtQohX0">
-                </iframe>
+                <iframe src="https://www.youtube.com/embed/0rbUDtQohX0?si=_lEbFmjxHnOF0-By" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
             <div class="col-1"></div>
         </div>
@@ -98,8 +100,10 @@
         <div class="row">
             <div class="col-1"></div>
             <div class="col-4">
-                <iframe src="https://www.youtube.com/watch?v=5HT1Wr7WwQI">
-                </iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5HT1Wr7WwQI?si=rD2njG2lasMWxXJy"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
             <div class="col-6">
                 <div class="name">
