--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
             <div class="col-4"></div>
             <div class="col-4 center">
 
-                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/" role="button"><i
-                        class="fa fa-linkedin-in"></i> LinkedIn</a>
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jackson-neal-/" role="button"> LinkedIn</a>
 
                 <a class="btn btn-primary btn-lg" href="mailto: Jackson.neal@comcast.net" role="button">Email</a>
 
