--- a/projects.html
+++ b/projects.html
@@ -96,6 +96,25 @@
             </div>
             <div class="col-1"></div>
         </div>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <p>
+                    <i>'Jump Monke Jump!'</i> is an AR party game made in Unity, where two players take turns going from
+                    one side of the course to the other, but with a twist. After every successful round for both
+                    players, each player gets to place an obstacle into the play-space. This allows for each gameplay
+                    experience to be different from the last.
+                </p>
+                <p>
+                    My role on this project was with coding and art. I helped code some of the mechanics in the game for
+                    obstacles, and I did the art for all project assets. The theme that our team chose for this project
+                    were simple cartoon characters and objects. When designing this game, we took a lot of inspiration
+                    from party games such as <i>Ultimate Chicken Horse</i> and <i>Mario Party</i>.
+
+                </p>
+            </div>
+            <div class="col-1"></div>
+        </div>
 
         <div class="row">
             <div class="col-1"></div>
@@ -109,8 +128,35 @@
                 <div class="name">
                     <h1>We are the Hamster</h1>
                     <h2>2-D Interactive Comic</h2>
-                    <h3>Made by Jackson Neal, Carson Strout, Sam Lummis, Chase Franklin, and Kevin Sherwood</h3>
+                    <h3>Made by Jackson Neal, Karla Watts, Steven Drain, Drew Fethke, and Gar Woodman</h3>
                 </div>
+            </div>
+            <div class="col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <p>
+                    <i>'We art the Hamster'</i> is an Interactive Comic that talks about the ideas of death and how we
+                    as people think about death. The ideas that come from this project come from the book
+                    <i>'Biocentrism'</i> by Robert Lanza. In this book he talks about how we as people and as
+                    generations of people share very similar experiences, and are in a way, more connected to each other
+                    than we think.
+                </p>
+                <p>
+                    The comic takes place in an elementary school in which the class pet hamster dies. The professor and
+                    the kids have a talk about what it means to die and what happens after life. This topic was a very
+                    hard idea to tackle, since we as humans are going to never know what it is like after death, but we
+                    can make good guesses about what it may be like.
+                </p>
+                <p>
+                    My title in this experience was as Team Lead. I helped to manage ideas between each member of the
+                    team, and help in both the art side of the project, and the coding of the game side. I helped to
+                    keep the members of the team feel like their voice was heard, keep ideas flowing during the early
+                    stages of the project, and to give us a clear direction for the project's success.
+
+
+                </p>
             </div>
             <div class="col-1"></div>
         </div>
@@ -130,6 +176,7 @@
             </div>
             <div class="col-4"></div>
         </div>
+
     </div>
 
 </body>
