more stuff (DTD)

--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             <div class="col-6">
                 <div class="name">
                     <h1>Jump Monke Jump!</h1>
-                    <h2>AR Party Game</h2>
+                    <h2>AR Party Game (2022)</h2>
                     <h3>Made by Jackson Neal, Carson Strout, Sam Lummis, Chase Franklin, and Kevin Sherwood</h3>
                 </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="col-6">
                 <div class="name">
                     <h1>We are the Hamster</h1>
-                    <h2>2-D Interactive Comic</h2>
+                    <h2>2-D Interactive Comic (2023)</h2>
                     <h3>Made by Jackson Neal, Karla Watts, Steven Drain, Drew Fethke, and Gar Woodman</h3>
                 </div>
             </div>
@@ -156,6 +156,40 @@
                     stages of the project, and to give us a clear direction for the project's success.
 
 
+                </p>
+            </div>
+            <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <div class="name">
+                    <h1>Dusk Till' Dawn</h1>
+                    <h2>VR Horror Game (2023-Present)</h2>
+                    <h3>Made by Jackson Neal</h3>
+                </div>
+                
+            </div>
+
+            <div class="col-5">
+                <img src="assests/imgs/water.png" alt="water">
+            </div>
+
+            <div class="col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <p>
+                    <i>'Dusk Till' Dawn'</i> is a VR Horror Experience that takes you into the boots of an
+                    unfortunate person stuck in the dead of night alone with their thoughts. The player must survive the
+                    night and use light sources wisely, or their insanity will get the best of them.
+                </p>
+                <p>
+                    This game is my Senior Year Showcase game for when I graduate from BSU next year. Currently the game
+                    is a work-in-progress, but I am making constant changes to the game as development continues.
+                    Progress will be posted on my LinkedIn page and on GitHub.
                 </p>
             </div>
             <div class="col-1"></div>
