--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,10 @@
                     <h2>AR Party Game (2022)</h2>
                     <h3>Made by Jackson Neal, Carson Strout, Sam Lummis, Chase Franklin, and Kevin Sherwood</h3>
                 </div>
+                <img src="assests/imgs/unity.png" id="tools" alt="unity">
+                <img src="assests/imgs/csharp.png" id="tools" alt="c#">
+                <img src="assests/imgs/photoshop.png" id="tools" alt="PH">
+                <img src="assests/imgs/github.png" id="tools" alt="github">
             </div>
             <div class="col-4">
                 <iframe src="https://www.youtube.com/embed/0rbUDtQohX0?si=_lEbFmjxHnOF0-By" title="YouTube video player"
@@ -130,6 +134,10 @@
                     <h2>2-D Interactive Comic (2023)</h2>
                     <h3>Made by Jackson Neal, Karla Watts, Steven Drain, Drew Fethke, and Gar Woodman</h3>
                 </div>
+                <img src="assests/imgs/unity.png" id="tools" alt="unity">
+                <img src="assests/imgs/csharp.png" id="tools" alt="c#">
+                <img src="assests/imgs/photoshop.png" id="tools" alt="PH">
+                <img src="assests/imgs/animate.png" id="tools" alt="AN">
             </div>
             <div class="col-1"></div>
         </div>
@@ -169,7 +177,13 @@
                     <h2>VR Horror Game (2023-Present)</h2>
                     <h3>Made by Jackson Neal</h3>
                 </div>
-                
+                <img src="assests/imgs/unity.png" id="tools" alt="unity">
+                <img src="assests/imgs/csharp.png" id="tools" alt="c#">
+                <img src="assests/imgs/meta.png" id="tools" alt="meta">
+                <img src="assests/imgs/maya.png" id="tools" alt="maya">
+                <img src="assests/imgs/photoshop.png" id="tools" alt="PH">
+                <img src="assests/imgs/blender.png" id="tools" alt="blender">
+                <img src="assests/imgs/github.png" id="tools" alt="github">
             </div>
 
             <div class="col-5">
